--- a/index.html
+++ b/index.html
@@ -160,6 +160,24 @@
                     </div>
                 </div>
             </div>
+
+            <div id='score-answer-modal' class='modal fade' tabindex='-1' role='dialog'>
+                <div class='vertical-alignment-helper'>
+                    <div class='modal-dialog modal-sm vertical-align-center'>
+                        <div class='modal-content'>
+                            <div class='modal-header col-center'>
+                                <h2 class='modal-title'></h4>
+                            </div>
+                            <div class='modal-footer'>
+                                <div class='col-center'>
+                                    <button type='button' class='btn btn-primary' data-dismiss='modal'>Continue</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         <div id='footer'>
