Fixed question text on question load

--- a/index.html
+++ b/index.html
@@ -171,14 +171,14 @@
         </ul>
 
         <ul class='list-group true-false'>
-            <li id='quiz-choice-1' class='list-group-item'>
+            <li class='list-group-item'>
                 <div class='radio'>
-                    <label>True</label>
+                    <label><input type="radio" name="answerOptions" value="true">True</label>
                 </div>
             </li>
-            <li id='quiz-choice-2' class='list-group-item'>
+            <li class='list-group-item'>
                 <div class='radio'>
-                    <label>False</label>
+                    <label><input type="radio" name="answerOptions" value="false">False</label>
                 </div>
             </li>
         </ul>
